dx/force-app/main/default/objects/ltng_Tenant__c/ltng_Tenant__c.object-meta.xml
<CustomObject>
    <label>Tenant</label>
    <nameField>
        <displayFormat>t-{0000000}</displayFormat>
        <label>Tenant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>