dx/force-app/main/default/objects/ltng_Tenant__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>(Example of something we can update on the person.)</description>
    <inlineHelpText>Note about the person</inlineHelpText>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>